<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>spinoza</groupId>
    <artifactId>cryptotracker</artifactId>
    <version>1.0.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>19-ea+3</version>
          </dependency>
          <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
          </dependency>
          <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.9.0</version>
          </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>spinoza.Main</mainClass>
                    <options>
                        <option>--add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                        <option>--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
                        <option>--add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
                        <option>--add-exports javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
                        <option>--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                        <option>--add-exports javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
                        <option>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</option>
                        <option>--add-exports javafx.graphics/com.sun.javafx.charts=ALL-UNNAMED</option>
                        <option>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</option>
                        <option>--add-reads javafx.graphics=ALL-UNNAMED</option>
                        <option>--add-opens javafx.controls/com.sun.javafx.charts=ALL-UNNAMED</option>
                        <option>--add-opens javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>
                        <option>--add-opens javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>
                        <option>--add-opens javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>
                        <option>--add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
                      </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>